# cursova

./: b6493e98-e226-4fba-a07a-8bd2629d6c09?sp=r  docker-compose.yaml  docker-compose.yml  docker.txt
.github/workflows/: azure.yaml  backend-cpp.yaml  backend-python.yaml  frontend.yaml
backend-cpp/: .dockerignore  CMakeLists.txt  Dockerfile  Dockerfile.dev
backend-cpp/.devcontainer/: .devcontainer.json  Dockerfile  devcontainer.json
backend-cpp/config/: Config.h
backend-cpp/src/: DatabaseManager.cpp  DatabaseManager.h  ImageController.cpp  ImageController.h  R2Manager.cpp  R2Manager.h  TaskContoller.cpp  TaskController.h  main.cpp
backend-cpp/src/config/: Config.h
backend-cpp/src/models/: Image.cpp  Image.h  Task.cpp  Task.h
backend-python/: .gitignore  Dockerfile  config.py  database.py  image_processor.py  main.py  r2_storage.py
frontend/: Dockerfile  Dockerfile.dev  env.sh  index.html  package-lock.json  package.json  vite.config.js
frontend/.devcontainer/: Dockerfile  devcontainer.json
frontend/public/: env-config.js  index.html
frontend/src/: App.css  App.jsx  App.jsx.bak
frontend/src/classes/: ArchiveManager.jsx  DateManager.jsx  ImageProcessor.js
frontend/src/components/: AdminPanel.jsx  Archive.jsx  FamilyArchive.jsx  ImageDetail.jsx  ImageEditor.jsx  ImageGallery.jsx  ImageUpload.jsx  Reports.jsx
frontend/src/services/: Api.js  mockApi.js
